Fix vertical alignment of Transfer amount model (#1936)
* Fix vertical alignment of Transfer amount model

It moves model from top alignment to center alignment

* Remove manual prefix of CSS property

System automatically adds browser-specific styles.

--- a/src/client/wallet/Transfer.less
+++ b/src/client/wallet/Transfer.less
@@ -54,6 +54,13 @@
         .ant-input-group-addon {
           text-align: right;
           width: 160px !important;
+          position: relative;
+        }
+
+        .ant-radio-group {
+          position: relative;
+          top: 50%;
+          transform: translateY(-50%);
         }
       }
     }
